fuchsia: fix Watchdog test when TimeTicks can be near zero

This makes WatchdogTest.DisarmTest pass when run close to system
startup time.

On Fuchsia, TimeTicks is 0-based, so this test would try to arm 
the watchdog with a negative time which confused the check-for-a-
debugger-timeout code in Watchdog.

Bug: 734232, 706592
Change-Id: I8859080d446f9c471659e5f3b89b50d5ab8cdbfb